# FGI

./: .env.example  .gitignore  AGENTS.md  A股恐惧贪婪指数A股恐惧贪婪指数（FGI）实施方案 · 终稿 V3.6.md  A股恐惧贪婪指数A股恐惧贪婪指数（FGI）实施方案 · 终稿 V3.7.md  A股恐惧贪婪指数_V3.6_开发任务拆解WBS.xlsx  A股恐惧贪婪指数（FGI）实施方案 · 终稿 V3.8.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_fgi.yml  daily_update.yml
data/: fgi.db
fgi/calculator/: fgi.py
fgi/calculator/funding/: f1.py  f2.py  f3.py
fgi/calculator/momentum/: m1.py  m2.py  m3.py  m4.py
fgi/calculator/sentiment/: s1.py  s2.py  (+2 more)
fgi/collector/: akshare_source.py  base.py  chains.py  fallback.py  mock_source.py  mootdx_source.py  tencent_source.py  trading_calendar.py  zzshare_source.py
fgi/common/: utils.py
fgi/config/: settings.py  version.py
fgi/output/: alert.py  backfill.py  backtest.py  daily_run.py  decision_matrix.py  pushplus.py  status.py  zt_backfill.py
fgi/storage/: database.py
scripts/: backfill_f1_margin.py  backfill_f3_flow.py  backfill_pb_pe_percentile.py  backfill_v4_qvix.py  check_no_external_conn.sh  fetch_m4.py  recompute_resume.py  recompute_scores.py  recompute_v2.py  spike_f3_alternatives.py  test_push.py
tests/unit/: test_akshare_source.py  test_alert.py  test_backfill.py  test_backtest.py  test_collector.py  test_common_utils.py  test_daily_run.py  test_decision_matrix.py  test_fgi.py  test_funding.py  test_m3.py  test_momentum.py  test_pushplus.py  test_sentiment.py  test_storage.py  test_trading_calendar.py  test_v4.py  test_valuation.py  test_version.py  test_zt_backfill.py  test_zzshare_source.py
(+3 files in other folders)
